syntax = "proto3";

package frame;

option go_package = "./frame/proto;proto";

service NodeBase {
  rpc EventMessage(stream EventMessageWraper) returns (SteamClosed) {}
}

message EventMessageWraper {
  string topic = 1;
  bytes body = 2;  
  string create_by = 3;
  string create_at = 4;
}

message SteamClosed {
  string msg = 1;
}
